<resources>
    <string name="app_name">OnFilm</string>
    <string name="title_logout">Đăng xuất</string>
    <string name="title_menu_home">Trang chủ</string>
    <string name="title_menu_favorite">Yêu thích</string>
    <string name="title_menu_search">Tìm kiếm</string>
    <string name="title_menu_account">Tài khoản</string>
    <string name="title_login">Đăng nhập</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Standard">Standard</string>
    <string name="title_new_film">Mới nhất</string>
    <string name="title_hot_film">Ưa thích</string>
    <string name="title_discover">Khám phá</string>
    <string name="title_genre">Thể loại</string>
    <string name="intent_object_film">object_film</string>
    <string name="describe">Describe</string>
    <string name="title_describe">Mô tả:</string>
    <string name="title_director">Đạo diễn, tác giả:</string>
    <string name="title_actors_film">Diễn viên:</string>
    <string name="title_duration_film">Thời lượng:</string>
    <string name="title_release_film">Phát hành:</string>
    <string name="title_limit">Giới hạn tuổi:</string>
    <string name="duration_on_episode">phút/tập</string>
    <string name="read_more">Đọc thêm</string>
    <string name="hide">Ẩn bớt</string>
    <string name="hint_search_name_film">Tìm kiếm theo tên phim</string>
    <string name="title_result">Kết quả tìm kiếm</string>
    <string name="title_result_new_film">Phim mới theo năm</string>
    <string name="title_result_hot_film">Phim yêu thích nhiều</string>
    <string name="hint_input_email">Nhập email của bạn</string>
    <string name="hint_input_password">Nhập mật khẩu tài khoản</string>
    <string name="title_remember_login">Ghi nhớ đăng nhập</string>
    <string name="title_if_not_have_account">Nếu bạn chưa có tài khoản</string>
    <string name="title_register">Đăng ký</string>
    <string name="hint_confirm_password">Xác nhận mật khẩu</string>
    <string name="title_if_have_account">Bạn đã có tài khoản</string>
    <string name="notification_email_invalid">Email không phù hợp</string>
    <string name="notification_password_invalid">Mật khẩu không phù hợp</string>
    <string name="notification_confirm_invalid">Xác nhận mật khẩu chưa phù hợp</string>
    <string name="error_input_email">Nhập lại email</string>
    <string name="error_input_password">Nhập lại mật khẩu</string>
    <string name="error_input_confirm">Nhập lại xác nhận mật khẩu</string>
    <string name="notification_email_existed">Email đã có tài khoản đăng kí</string>
    <string name="notification_failured_check_email">Kiểm tra email bị lỗi</string>
    <string name="notification_successfull_register">Đăng ký thành công</string>
    <string name="notification_failured_login">Đăng nhập thất bại</string>
    <string name="notification_successful_login">Đăng nhập thành công</string>
    <string name="notification_exactly">Sai mật khẩu</string>
    <string name="notification_account_not_existed">Tài khoản không tồn tại</string>
    <string name="action_get_account_login">get_account_main_activity</string>
    <string name="title_like">like</string>
    <string name="logout_account">logout_account</string>
    <string name="notìication_in_load_film">Lỗi nhận dữ liệu</string>
    <string name="hint_input_password_current">Nhập mật khẩu hiện tại</string>
    <string name="hint_input_password_new">Nhập mật khẩu mới</string>
    <string name="title_new_password">Mật khẩu mới</string>
    <string name="title_change_password">Đổi mật khẩu</string>
    <string name="error_input_password_current">Hãy nhập mật khẩu hiện tại</string>
    <string name="error_input_password_new">Hãy nhập mật khẩu mới</string>
    <string name="error_input_password_confirm">Hãy nhập mật khẩu xác nhận</string>
    <string name="error_password_current_not_match">Mật khẩu không chính xác</string>
    <string name="error_input_password_new_not_match_current">Mật khẩu mới không giống mật khẩu cũ</string>
    <string name="error_input_confirm_not_match">Mật khẩu xác nhận không trùng khớp</string>
    <string name="notification_update_password_successful">Cập nhật mật khẩu thành công</string>
    <string name="notification_update_password_failured">Cập nhật mật khẩu thất bại</string>
    <string name="notification_connect_internet">Hãy kết nối mạng</string>
</resources>