<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray_blue_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view_support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:background="@drawable/background_videoview_logo"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:id="@+id/layout_input_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:background="@drawable/background_input_account"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/image_logo">

        <ImageView
            android:id="@+id/image_email"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_email"
            app:tint="@color/white"
            android:layout_marginLeft="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toRightOf="@id/image_email"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/hint_input_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/yellow"
            android:textColorHint="@color/gray_light"
            android:textSize="@dimen/_13ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:background="@drawable/background_input_account"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_input_email">

        <ImageView
            android:id="@+id/image_password"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_password"
            app:tint="@color/white"
            android:layout_marginLeft="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toRightOf="@id/image_password"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/hint_input_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/yellow"
            android:textColorHint="@color/gray_light"
            android:textSize="@dimen/_13ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_input_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:background="@drawable/background_input_account"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_input_password">

        <ImageView
            android:id="@+id/image_password_confirm"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_password"
            app:tint="@color/white"
            android:layout_marginLeft="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/edit_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toRightOf="@id/image_password_confirm"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/hint_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/yellow"
            android:textColorHint="@color/gray_light"
            android:textSize="@dimen/_13ssp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center"
        android:background="@drawable/background_text_login"
        android:text="@string/title_register"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_input_password_confirm"/>

    <RelativeLayout
        android:id="@+id/layout_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_title_have_account"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center_vertical"
            android:text="@string/title_if_have_account"
            android:textColor="@color/gray_light"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/text_move_login"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_toRightOf="@id/text_title_have_account"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center_vertical"
            android:text="@string/title_login"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_13ssp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_back"
        app:tint="@color/white"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>