<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_blue_dark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AccountFragment">

    <ImageView
        android:id="@+id/image_logo_favorite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/logo_account"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/background_videoview_logo"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_first_char_name"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="@dimen/_40ssp"
        android:textColor="@color/gray_blue_dark"
        android:gravity="center"
        android:background="@drawable/background_text_first_char_name"
        app:layout_constraintTop_toBottomOf="@id/image_logo_favorite"
        app:layout_constraintBottom_toBottomOf="@id/image_logo_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_email_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/text_first_char_name"/>

    <ImageView
        android:id="@+id/image_open_navigation"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_menu"
        app:tint="@color/white"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <RelativeLayout
        android:id="@+id/layout_input_password_current"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:background="@drawable/background_input_account"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/text_email_account">

        <ImageView
            android:id="@+id/image_password_current"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_password"
            app:tint="@color/white"
            android:layout_marginLeft="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/edit_password_current"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toRightOf="@id/image_password_current"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/hint_input_password_current"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/yellow"
            android:textColorHint="@color/gray_light"
            android:textSize="@dimen/_13ssp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_title_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_new_password"
        android:gravity="center"
        android:textColor="@color/yellow"
        android:fontFamily="@font/ubuntu_medium"
        android:textSize="@dimen/_13ssp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_input_password_current" />

    <RelativeLayout
        android:id="@+id/layout_input_password_new"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:background="@drawable/background_input_account"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/text_title_new_password">

        <ImageView
            android:id="@+id/image_password_new"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_change"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/edit_password_new"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toRightOf="@id/image_password_new"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/hint_input_password_new"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/yellow"
            android:textColorHint="@color/gray_light"
            android:textSize="@dimen/_13ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_input_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:background="@drawable/background_input_account"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_input_password_new">

        <ImageView
            android:id="@+id/image_password_confirm"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_change_confirm"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/edit_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toRightOf="@id/image_password_confirm"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/hint_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/yellow"
            android:textColorHint="@color/gray_light"
            android:textSize="@dimen/_13ssp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_upload_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center"
        android:background="@drawable/background_text_login"
        android:text="@string/title_change_password"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_input_password_confirm"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>